assertThat(...).isEqualTo(true) -> assertThat(...).isTrue()